This at least started failing from: https://ci.freebsd.org/job/FreeBSD-head-amd64-test/10016/testReport/junit/lib.libc.sys/stat_test/stat_socket/ The some other examples: https://ci.freebsd.org/job/FreeBSD-head-amd64-test/11178/testReport/junit/lib.libc.sys/stat_test/stat_socket/ https://ci.freebsd.org/job/FreeBSD-head-amd64-test/12581/testReport/junit/lib.libc.sys/stat_test/stat_socket/ Error Message: /usr/src/contrib/netbsd-tests/lib/libc/sys/t_stat.c:355: Expected errno 36, got 61, in connect(fd, (struct sockaddr *)&addr, sizeof(struct sockaddr_in)) == -1
A commit references this bug: Author: lwhsu Date: Tue Sep 17 14:08:09 UTC 2019 New revision: 352448 URL: https://svnweb.freebsd.org/changeset/base/352448 Log: Temporarily skip flakey test case lib.libc.sys.stat_test.stat_socket PR: 240621 Sponsored by: The FreeBSD Foundation Changes: head/contrib/netbsd-tests/lib/libc/sys/t_stat.c
I'm not sure how this test is expected to (consistently) work. It does a O_NONBLOCK connect(2) to 127.0.0.1:42 and requires that errno is EINPROGRESS.