Temporarily skip flakey test case lib.libc.sys.stat_test.stat_socket

PR:		240621
Sponsored by:	The FreeBSD Foundation


git-svn-id: svn+ssh://svn.freebsd.org/base/head@352448 ccf9f872-aa2e-dd11-9fc8-001c23d0bc1f